feat(ansible): Add `local_prefix` variable
Many paths explicitly reference either `/usr/local` or `~/.local`. On
"normal" systems that I fully control, this is fine, but issues creep up
in other situations:

- `/usr/local` is unwriteable
    - I might not have root access
    - It may be immutable, e.g. an atomic distro
- I may temporarily want to use a different prefix for whatever reason

Now there is a top-level `local_prefix` variable that by default points
to the user local directory, and other variables needing a "local" path
should be derived from this variable. Now I can leverage Ansible's
variable precedence system to override it where/when needed.

--- a/ansible/roles/nvim/defaults/main.yml
+++ b/ansible/roles/nvim/defaults/main.yml
@@ -1,4 +1,4 @@
-nvim_bin: /usr/local/bin/nvim
+nvim_bin: "{{ (local_prefix, 'bin/nvim') | path_join }}"
 nvim_config: "{{ (config_dir, 'nvim') | path_join }}"
 nvim_data: "{{ (data_dir, 'nvim') | path_join }}"
 build:
