--- a/ansible/roles/software/tasks/desktop.yml
+++ b/ansible/roles/software/tasks/desktop.yml
@@ -25,7 +25,7 @@
 
 - name: Install Kitty terminal
   ansible.builtin.import_tasks: kitty.yml
-  when: "'/usr/local/bin/kitty' is not file"
+  when: "{{ (local_prefix, 'bin/kitty') | path_join }} is not file"
   tags:
     - shell
     - kitty
