--- a/ansible/roles/software/tasks/zsh.yml
+++ b/ansible/roles/software/tasks/zsh.yml
@@ -17,10 +17,10 @@
     state: latest
   when: ansible_os_family == 'Debian'
 
-- name: Create system-local zsh site-functions directory
+- name: Create local zsh site-functions directory
   become: true
   ansible.builtin.file:
-    path: /usr/local/share/zsh/site-functions
+    path: "{{ (zsh.local_dir, 'site-functions') | path_join }}"
     state: directory
     mode: "0755"
 
@@ -28,7 +28,7 @@
   become: true
   ansible.builtin.file:
     src: /usr/share/zsh/site-functions/_lf/lf.zsh
-    dest: /usr/local/share/zsh/site-functions/_lf
+    dest: "{{ (zsh.local_dir, 'site-functions/_lf') | path_join }}"
     state: link
     force: true
 
