--- a/ansible/vars/main.yml
+++ b/ansible/vars/main.yml
@@ -6,3 +6,5 @@ opt_dir: "{{ (ansible_env.HOME, '.local', 'opt') | path_join }}"
 config_dir: "{{ ansible_env.XDG_CONFIG_HOME | default((ansible_env.HOME, '.config') | path_join) }}"
 data_dir: "{{ ansible_env.XDG_DATA_HOME | default((ansible_env.HOME, '.local', 'share') | path_join) }}"
 state_dir: "{{ ansible_env.XDG_STATE_HOME | default((ansible_env.HOME, '.local', 'state') | path_join) }}"
+
+local_prefix: "{{ (ansible_env.HOME, '.local') | path_join }}"
