fix(ansible): `startswith` is not a filter

--- a/ansible/roles/software/tasks/utils.yml
+++ b/ansible/roles/software/tasks/utils.yml
@@ -85,7 +85,7 @@
   tags: shell
   block:
     - name: Ensure local directories exist
-      become: "{{ local_prefix | startswith('/usr') }}"
+      become: "{{ local_prefix.startswith('/usr') }}"
       ansible.builtin.file:
         path: "{{ (local_prefix, item) | path_join }}"
         state: directory
