--- a/ansible/roles/software/handlers/main.yml
+++ b/ansible/roles/software/handlers/main.yml
@@ -1,6 +1,7 @@
 # vim: ft=yaml.ansible
 
 - name: Refresh repositories (Suse)
+  become: true
   community.general.zypper_repository:
     repo: "*"
     runrefresh: true
@@ -8,6 +9,7 @@
   listen: refresh repositories
 
 - name: Refresh repositories (Debian)
+  become: true
   ansible.builtin.apt:
     update_cache: true
   when: ansible_os_family == 'Debian'
