refactor(ansible): restructure Neovim role and plays
While an interesting exercise initially, trying to do things like build
and rebuild Neovim through Ansible ended up being error-prone and
awkward. Handling such tasks is probably better off in something like
a Justfile, so everything about actually building Neovim has been
removed. Setting up build *prerequisites* for Neovim is now an on-demand
task set that can be run via the `build` tag.

Additionally, the `nvim` role and `nvim_bootstrap` playbook were
restructured to try and follow "Good Practices for Ansible". Build
packages are now specified via the `nvim_build_deps` variable, which is
chosen dynamically based on `ansible_os_family`.

--- a/ansible/roles/nvim/defaults/main.yml
+++ b/ansible/roles/nvim/defaults/main.yml
@@ -1,8 +1,8 @@
 nvim_bin: "{{ (local_prefix, 'bin/nvim') | path_join }}"
 nvim_config: "{{ (config_dir, 'nvim') | path_join }}"
 nvim_data: "{{ (data_dir, 'nvim') | path_join }}"
-build:
-  type: RelWithDebInfo
+nvim_repo: https://github.com/neovim/neovim
+nvim_build:
   tag: nightly
   path: "{{ (src_dir, 'neovim') | path_join }}"
 lazy_path: "{{ (nvim_data, 'lazy', 'lazy.nvim') | path_join }}"
