--- a/ansible/nvim_bootstrap.yml
+++ b/ansible/nvim_bootstrap.yml
@@ -6,28 +6,13 @@
   vars_files:
     - vars/main.yml
   tasks:
-    - name: Install Neovim build dependencies
-      ansible.builtin.import_role:
-        name: nvim
-        tasks_from: build_deps
-      tags: build
-
-    - name: Clone Neovim repository
-      ansible.builtin.import_role:
-        name: nvim
-        tasks_from: checkout
-      tags: build
-
-    - name: Build and install Neovim
-      ansible.builtin.import_role:
-        name: nvim
-        tasks_from: make
-      tags: build
-
-    - name: Ensure nvim state directories
+    - name: Ensure Neovim state directories exist
       ansible.builtin.file:
         path: "{{ (state_dir, 'nvim', item) | path_join }}"
         state: directory
+        owner: zeroknight
+        group: zeroknight
+        mode: '0750'
       loop:
         - session
         - shada
@@ -35,19 +20,14 @@
         - undo
         - view
 
-    - name: Ensure nvim site directory
+    - name: Ensure Neovim site directory exists
       ansible.builtin.file:
         path: "{{ (data_dir, 'nvim', 'site') | path_join }}"
         state: directory
+        owner: zeroknight
+        group: zeroknight
+        mode: '0755'
 
-    - name: Bootstrap Lazy.nvim and install plugins
+    - name: Import nvim role
       ansible.builtin.import_role:
         name: nvim
-        tasks_from: plugins
-      tags: plugin
-
-    - name: Set up plugin providers
-      ansible.builtin.import_role:
-        name: nvim
-        tasks_from: providers
-      tags: plugin
