fix(ansible): install plugins instead of syncing
This is a more idempotent option, as it only installs what's missing.

--- a/ansible/roles/nvim/tasks/plugins.yml
+++ b/ansible/roles/nvim/tasks/plugins.yml
@@ -20,12 +20,12 @@
     name: npm
     state: present
 
-- name: Sync nvim plugins
+- name: Install nvim plugins
   ansible.builtin.command:
     argv:
       - "{{ nvim_bin }}"
       - --headless
-      - +Lazy! sync
+      - +Lazy! install
       - +qa
     creates: "{{ (state_dir, 'nvim', 'lazy') | path_join }}"
 
