fix(ansible): ensure Lua and/or LuaJIT is installed for z.lua
Resolves #41.

--- a/ansible/roles/software/tasks/main.yml
+++ b/ansible/roles/software/tasks/main.yml
@@ -1,5 +1,9 @@
 # vim: ft=yaml.ansible
 
+- name: Set distribution-specific variables
+  ansible.builtin.include_vars:
+    file: "{{ ansible_os_family }}.yml"
+
 - name: Configure package manager
   ansible.builtin.import_tasks: pkgmgr.yml
   tags:
