refactor(ansible): break up and restructure `software` role
The "software" role is too broad and cumbersome to define
distribution-specific behavior around. So, let's start to break it up
a bit.

- Moved package manager configuration and repository setup to a new
  "pkgmgr" role
    - Per-distribution tasks
    - Package manager specific tasks
- Instances of `ansible_os_family` were swapped for the more precise
  `ansible_distribution`
- Package lists for software packages to install were moved to variables

Additional changes:

- The checksum for the gh-cli RPM repository was updated to reflect the
  new key in use
- The "refresh repositories" handler is only notified on the steps that
  actually add a repository

--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -26,6 +26,11 @@
         name: home
       tags: home
 
+    - name: Configure package manager and repositories
+      ansible.builtin.import_role:
+        name: pkgmgr
+      tags: pkgmgr
+
     - name: Install and set up software
       ansible.builtin.import_role:
         name: software
