--- a/ansible/roles/software/vars/Ubuntu.yml
+++ b/ansible/roles/software/vars/Ubuntu.yml
@@ -19,7 +19,7 @@ software_utility_packages:
   - keychain
   - kitty-terminfo
   - parallel
-  - plocate
+  - "{{ ansible_distribution_version is version('22.04', '>=') | ternary('plocate', 'mlocate') }}"
   - ripgrep
   - sed
   - tmux
