--- a/ansible/roles/software/tasks/desktop.yml
+++ b/ansible/roles/software/tasks/desktop.yml
@@ -17,7 +17,7 @@
 
 - name: Install Kitty terminal
   ansible.builtin.import_tasks: kitty.yml
-  when: "{{ (local_prefix, 'bin/kitty') | path_join }} is not file"
+  when: ((local_prefix, "bin/kitty") | path_join) is not file
   tags:
     - shell
     - kitty
