fix(ansible): use symlink for fdfind and batcat
Partial revert of 8402dbfa. `fdfind` and `batcat` are already symlinks
in recent versions of Debian and Ubuntu. Or maybe they always were and
I didn't notice.

--- a/ansible/roles/software/tasks/utils.yml
+++ b/ansible/roles/software/tasks/utils.yml
@@ -21,7 +21,7 @@
       ansible.builtin.file:
         src: "/usr/bin/{{ item[0] }}"
         dest: "/usr/local/bin/{{ item[1] }}"
-        state: hard
+        state: link
         owner: root
         group: root
         mode: '0755'
