--- a/ansible/roles/software/vars/Debian.yml
+++ b/ansible/roles/software/vars/Debian.yml
@@ -18,6 +18,7 @@ software_utility_packages:
   - jq
   - keychain
   - kitty-terminfo
+  - "{{ ansible_distribution_version is version('12', '>=') | ternary('lf', False) }}"
   - parallel
   - plocate
   - ripgrep
