feat(ansible): install neovim package for bootstrapping
Grabbing a binary package from the distro repositories makes
bootstrapping my Neovim setup more convenient even though I likely won't
be using it after building a more recent version from source.

In the event that the distro version isn't new enough to leverage some
bleeding edge feature that Lazy and/or nvim-treesitter decided to use,
install the build prerequisites before trying to bootstrap the rest so
that I can build from source and re-run the playbook.

--- a/ansible/roles/nvim/tasks/main.yml
+++ b/ansible/roles/nvim/tasks/main.yml
@@ -4,6 +4,19 @@
   ansible.builtin.include_vars:
     file: "{{ ansible_distribution | replace(' ', '_') }}.yml"
 
+# NOTE: I'll almost always be using a more bleeding version of nvim for regular
+# use, but the repo version is handy for bootstrapping.
+- name: Install Neovim stable
+  ansible.builtin.package:
+    name: neovim
+    state: present
+
+- name: Set up prerequisites to build Neovim from source
+  ansible.builtin.include_tasks: build.yml
+  tags:
+    - never
+    - build
+
 - name: Bootstrap Lazy.nvim and install plugins
   ansible.builtin.include_tasks: plugins.yml
   tags: plugin
@@ -13,9 +26,3 @@
   tags:
     - plugin
     - provider
-
-- name: Set up prerequisites to build Neovim from source
-  ansible.builtin.include_tasks: build.yml
-  tags:
-    - never
-    - build
