--- a/ansible/roles/python/tasks/main.yml
+++ b/ansible/roles/python/tasks/main.yml
@@ -1,20 +1,10 @@
 # vim: ft=yaml.ansible
 
-- name: Ensure Python 3 (Debian)
+- name: Install Python 3
   become: true
-  ansible.builtin.apt:
-    name:
-      - python3
+  ansible.builtin.package:
+    name: python3
     state: present
-  when: ansible_os_family == 'Debian'
-
-- name: Ensure Python 3 (Suse)
-  become: true
-  community.general.zypper:
-    name:
-      - python3
-    state: present
-  when: ansible_os_family == 'Suse'
 
 - name: Set up virtualenv for user installs
   ansible.builtin.import_tasks: venv.yml
