--- a/ansible/roles/software/handlers/main.yml
+++ b/ansible/roles/software/handlers/main.yml
@@ -5,12 +5,12 @@
   community.general.zypper_repository:
     repo: "*"
     runrefresh: true
-  when: ansible_os_family == 'Suse'
+  when: ansible_facts["os_family"] == "Suse"
   listen: refresh repositories
 
 - name: Refresh repositories (Debian)
   become: true
   ansible.builtin.apt:
     update_cache: true
-  when: ansible_os_family == 'Debian'
+  when: ansible_facts["os_family"] == "Debian"
   listen: refresh repositories
